Post-release fixes and tweaks. Fixed postsview page count button crash on iOS 14, 15

--- a/App/Theming/base.less
+++ b/App/Theming/base.less
@@ -418,6 +418,7 @@ footer {
   font-weight: normal;
   text-align: center;
   line-height: 1;
+  margin-top: 50px;
   margin-bottom: 10px;
   -webkit-user-select: none;
 }
