--- a/App/Theming/posts-view-alternate.css
+++ b/App/Theming/posts-view-alternate.css
@@ -320,6 +320,7 @@ footer:after {
   font-weight: normal;
   text-align: center;
   line-height: 1;
+  margin-top: 50px;
   margin-bottom: 10px;
   -webkit-user-select: none;
 }
