--- a/App/Theming/posts-view-spankykong-light.less
+++ b/App/Theming/posts-view-spankykong-light.less
@@ -386,9 +386,10 @@ span.mention.highlight {
 #end {
     font-weight: normal;
     text-align: center;
-    line-height: 1;
     margin-bottom: 10px;
     -webkit-user-select: none;
+    color: #000;
+    line-height: 3em;
 }
 .voiceover-only {
     position: absolute;
@@ -557,10 +558,6 @@ footer {
 }
 .editedby span.mention.highlight {
     color: #9337fd;
-}
-#end {
-    color: rgba(255, 255, 255, 0.3);
-    line-height: 3em;
 }
 body {
     color: #000000;
